@@ -2,7 +2,7 @@ dnl -*- mode: shell-script -*-
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(IDL.h)
-AM_INIT_AUTOMAKE(libIDL, 0.5.6)
+AM_INIT_AUTOMAKE(libIDL, 0.5.7)
 
 AC_ISC_POSIX
 
